--- a/META.yml
+++ b/META.yml
@@ -1,31 +1,24 @@
 ---
 abstract: '(EXPERIMENTAL) share directory'
 author:
-  - 'Tokuhiro Matsuno E<lt>tokuhirom AAJKLFJEF@ GMAIL COME<gt>'
+  - 'Tokuhiro Matsuno <tokuhirom AAJKLFJEF@ GMAIL COM>'
 build_requires:
-  Module::Build::Pluggable::CPANfile: 0.02
-  Module::Build::Pluggable::GithubMeta: 0
   Test::More: 0.98
   Test::Requires: 0
 configure_requires:
-  Module::Build: 0.40
-  Module::Build::Pluggable: 0
-  Module::Build::Pluggable::CPANfile: 0.02
-  Module::Build::Pluggable::GithubMeta: 0
+  CPAN::Meta: 0
+  Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Minilla/v0.0.49, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Amon2-Plugin-ShareDir
-no_index:
-  directory:
-    - inc
 provides:
   Amon2::Plugin::ShareDir:
     file: lib/Amon2/Plugin/ShareDir.pm
-    version: v0.0.2
+    version: v0.0.3
 requires:
   Amon2: 3.76
   File::ShareDir: 0
@@ -34,7 +27,9 @@ requires:
   parent: 0
   perl: 5.008005
 resources:
-  homepage: https://github.com/tokuhirom/Amon2-Plugin-ShareDir/tree
-  license: http://dev.perl.org/licenses/
+  bugtracker: https://github.com/tokuhirom/Amon2-Plugin-ShareDir/issues
+  homepage: https://github.com/tokuhirom/Amon2-Plugin-ShareDir
   repository: git://github.com/tokuhirom/Amon2-Plugin-ShareDir.git
-version: v0.0.2
+version: 0.0.3
+x_contributors:
+  - 'tokuhirom <tokuhirom@gmail.com>'
