--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ configure_requires:
   CPAN::Meta::Prereqs: 0
   Module::Build: 0.38
 dynamic_config: 0
-generated_by: 'Minilla/v0.0.49, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Minilla/v0.5.6, CPAN::Meta::Converter version 2.131560'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,10 +24,11 @@ no_index:
     - share
     - eg
     - examples
+    - author
 provides:
   Amon2::Plugin::ShareDir:
     file: lib/Amon2/Plugin/ShareDir.pm
-    version: v0.0.5
+    version: v0.0.6
 requires:
   Amon2: 3.76
   Amon2::Util: 0
@@ -43,6 +44,6 @@ resources:
   bugtracker: https://github.com/tokuhirom/Amon2-Plugin-ShareDir/issues
   homepage: https://github.com/tokuhirom/Amon2-Plugin-ShareDir
   repository: git://github.com/tokuhirom/Amon2-Plugin-ShareDir.git
-version: v0.0.5
+version: v0.0.6
 x_contributors:
   - 'tokuhirom <tokuhirom@gmail.com>'
