Import of TOKUHIROM/Amon2-Plugin-ShareDir-v0.0.7 from CPAN.
gitpan-cpan-distribution: Amon2-Plugin-ShareDir
gitpan-cpan-version:      v0.0.7
gitpan-cpan-path:         TOKUHIROM/Amon2-Plugin-ShareDir-v0.0.7.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,18 +3,16 @@ abstract: '(EXPERIMENTAL) share directory'
 author:
   - 'Tokuhiro Matsuno <tokuhirom AAJKLFJEF@ GMAIL COM>'
 build_requires:
-  Test::More: 0.98
-  Test::Requires: 0
+  Test::More: '0.98'
+  Test::Requires: '0'
 configure_requires:
-  CPAN::Meta: 0
-  CPAN::Meta::Prereqs: 0
-  Module::Build: 0.38
+  Module::Build: '0.38'
 dynamic_config: 0
-generated_by: 'Minilla/v0.5.6, CPAN::Meta::Converter version 2.131560'
+generated_by: 'Minilla/v2.1.1, CPAN::Meta::Converter version 2.141520'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Amon2-Plugin-ShareDir
 no_index:
   directory:
@@ -25,25 +23,26 @@ no_index:
     - eg
     - examples
     - author
+    - builder
 provides:
   Amon2::Plugin::ShareDir:
     file: lib/Amon2/Plugin/ShareDir.pm
-    version: v0.0.6
+    version: v0.0.7
 requires:
-  Amon2: 3.76
-  Amon2::Util: 0
-  Amon2::Web: 0
-  File::ShareDir: 0
-  List::Util: 0
-  MRO::Compat: 0
-  if: 0
-  parent: 0
-  perl: 5.008005
-  version: 0
+  Amon2: '3.76'
+  Amon2::Util: '0'
+  Amon2::Web: '0'
+  File::ShareDir: '0'
+  List::Util: '0'
+  MRO::Compat: '0'
+  if: '0'
+  parent: '0'
+  perl: '5.008005'
+  version: '0'
 resources:
   bugtracker: https://github.com/tokuhirom/Amon2-Plugin-ShareDir/issues
   homepage: https://github.com/tokuhirom/Amon2-Plugin-ShareDir
   repository: git://github.com/tokuhirom/Amon2-Plugin-ShareDir.git
-version: v0.0.6
+version: v0.0.7
 x_contributors:
   - 'tokuhirom <tokuhirom@gmail.com>'
